--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -19,7 +19,7 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 2px #585858 !important;
+		border: solid 2px #4c4646 !important;
 	}
 
 		input[type="submit"]:hover,
