--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1675,7 +1675,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #f2849e !important;
+			color: #0dd2e0 !important;
 		}
 
 	strong, b {
@@ -1896,8 +1896,8 @@
 			}
 
 			.icon.style2:hover {
-				color: #f2849e;
-				border-color: #f2849e;
+				color: #0dd2e0;
+				border-color: #0dd2e0;
 			}
 
 			.icon.style2:active {
@@ -2509,8 +2509,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
-			box-shadow: inset 0 0 0 2px #f2849e;
+			color: #0dd2e0 !important;
+			box-shadow: inset 0 0 0 2px #0dd2e0;
 		}
 
 		input[type="submit"]:active,
@@ -2552,7 +2552,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #f2849e;
+				background-color: #0dd2e0;
 			}
 
 			input[type="submit"].special:active,
@@ -2560,7 +2560,7 @@
 			input[type="button"].special:active,
 			button.special:active,
 			.button.special:active {
-				background-color: #ee5f81;
+				background-color: #04bbdb;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2859,7 +2859,7 @@
 		#header .logo {
 			display: block;
 			border-bottom: 0;
-			color: #FFD700;
+			color: #0c00ff;
 			font-weight: 900;
 			font-size: 150%;
 			letter-spacing: 0.35em;
@@ -3013,7 +3013,7 @@
 		max-width: 80%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
-		background: #DAA520;
+		background: #0fb4bc;
 		color: #ffffff;
 		cursor: default;
 		visibility: hidden;
@@ -3034,7 +3034,7 @@
 			padding: 2.75em;
 			opacity: 0;
 			overflow-y: auto;
-			
+
 		}
 
 			#menu > .inner > ul {
