--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2859,7 +2859,7 @@
 		#header .logo {
 			display: block;
 			border-bottom: 0;
-			color: #0c00ff;
+			color: #011968;
 			font-weight: 900;
 			font-size: 150%;
 			letter-spacing: 0.35em;
